# spicky-ppomodoro-pet

./: .gitignore  AGENTS.md  LICENSE  README.md  idea.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: windows-unsigned-installer.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-overlay-shell-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-REVIEWS.md  01-VERIFICATION.md
.planning/phases/02-pet-motion-click-personality/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: architecture-rules.md  product-rules.md
public/assets/audio/: README.md
public/assets/images/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: bootstrap.ts  main.ts  ui.ts
src/features/audio/: audio-player.ts
src/features/desktop-walker/: desktop-walker.ts
src/features/spiky-state/: spiky-state.ts
src/features/timer/: timer.ts
src/features/window-shell/: desktop-window.ts
src/shared/assets/: manifest.ts
src/shared/constants/: timer-presets.ts
src/styles/: app.css
(+1 files in other folders)
