[package]
name = "spiky-pet"
version = "0.1.0"
description = "Spiky Ppomodoro pet desktop pet pomodoro timer"
edition = "2021"
build = "build.rs"

[lib]
name = "spiky_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
